fix(java11): remove deprecated JVM flags (#1489)
-XX:UseCGroupMemoryLimitForHeap was deprecated in Java 8u191. It's
functionality is now enabled by default. -XX:MaxRAMFraction was also
replaced by the (more flexible) -XX:MaxRAMPercentage.
https://www.oracle.com/technetwork/java/javase/8u191-relnotes-5032181.html

Java 8 will still launch with the old flags, but >10 will not.

We've been using Java >8u191 in every service since Spinnaker 1.14.0. So
this version of Halyard will still successfully deploy 1.14.0, but not
1.13.0 or earlier. (Because we we're hardcoding the version of the JDK
in Echo to 8u111 until then, probably accidentally.)